# ghc-prof-aeson

./: .travis.yml  ChangeLog.md  README.md  appveyor.yml  ghc-prof-aeson.cabal  shell.nix  stack.yaml
src/Profiling/GHC/: Aeson.hs
test/: Main.hs
