name:           ghc-prof-aeson
version:        0.1.0.0
description:    Parser for GHC's JSON profiling output.
homepage:       https://github.com/Fuuzetsu/ghc-prof-aeson#readme
bug-reports:    https://github.com/Fuuzetsu/ghc-prof-aeson/issues
author:         Mateusz Kowalczyk
maintainer:     fuuzetsu@fuuzetsu.co.uk
copyright:      2018, Mateusz Kowalczyk
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/Fuuzetsu/ghc-prof-aeson

library
  exposed-modules: Profiling.GHC.Aeson
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite ghc-prof-aeson-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ghc_prof_aeson
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ghc-prof-aeson
  default-language: Haskell2010
